@@ -141,12 +141,57 @@ public class SessionCoursServiceImpl implements ISessionCoursService {
         return response;
     }
 
-//    @Override
-//    public List<SessionCours> findSessionCoursByEtudiantId(String etudiantId)
-//    {
-//
-//        return List.of();
-//    }
+    @Scheduled(cron = "0 0 17-21 * * *")
+    public List<SessionEtudiantQrCodeMobileResponse> getEtudiantAndSessionCours()
+    {
+        LocalDate aujourdHui = LocalDate.now();
+        List<SessionCours> sessionsDuJours = sessionCoursRepository.findSessionCoursByDateSession(aujourdHui);
+        if (sessionsDuJours.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<SessionEtudiantQrCodeMobileResponse> reponses = new ArrayList<>();
+
+        for (SessionCours session : sessionsDuJours) {
+            Optional<Classe> optClasse = classeRepository.findById(session.getClasseId());
+            if (optClasse.isEmpty()) continue;
+
+            Classe classe = optClasse.get();
+            List<Etudiant> etudiants = etudiantRepository.findByclasseId(classe.getId());
+
+            for (Etudiant etudiant : etudiants) {
+                Optional<Utilisateur> optUtilisateur = utilisateurRepository.findById(etudiant.getUtilisateurId());
+                if (optUtilisateur.isEmpty()) continue;
+
+                Utilisateur utilisateur = optUtilisateur.get();
+
+                SessionEtudiantQrCodeMobileResponse dto = new SessionEtudiantQrCodeMobileResponse();
+                dto.setSessionId(session.getId());
+                dto.setNomComplet(utilisateur.getPrenom() + " " + utilisateur.getNom());
+                dto.setMatricule(etudiant.getMatricule());
+                dto.setClasseLibelle(classe.getLibelle());
+                dto.setHeureSession(session.getHeureDebut());
+                dto.setDateSession(session.getDateSession()); // déjà LocalDate
+                coursRepository.findById(session.getCoursId()).ifPresent(c ->
+                {
+                    dto.setCours(c.getLibelle());
+                });
+                salleRepository.findById(session.getSalleId()).ifPresent(salle -> {
+                    dto.setSalleCours(salle.getNumero());
+                });
+
+                List<Paiement> paiements = paiementRepository.findAll();
+                Optional<Paiement> paiement = paiements.stream()
+                        .filter(paiement1 -> paiement1.getEtudiantId().equals(etudiant.getId())
+                        ).findFirst();
+                dto.setPaiementStatut(paiement.get().getStatus());
+                reponses.add(dto);
+            }
+        }
+        return reponses;
+
+
+    }
 
     @Override
     public List<SessionAllResponse> getAllSessionCoursDuJour()
